kermeta_projects/fr.irisa.triskell.kermeta.tests/test/io/typechecher_tests/valid/ClassSubTypingWithGenericOperations.kmt
/* $Id: ClassSubTypingWithGenericOperations.kmt,v 1.1 2007-09-10 08:35:06 cfaucher Exp $ */

// Simple subtyping test for simple 
// inheritance between two generic classes
// and generic operations

package tctest;

class X {}
class Y inherits X {}

class A<T> {}
class B<G> inherits A<G> {}

class Test {

	operation test1<T>(t : T) : T is do
		var x : X
		x := test1(X.new)
	end
	
	operation test2<T>(t : T) : T is do
		var a : A<Y> 
		var b : B<Y> init B<Y>.new
		a := test1(b)
	end
	
	operation test3<T>(t : B<T>) : T is do
		var a : A<T> init t
	end

}

/* END OF FILE */